--- a/app/globals.css
+++ b/app/globals.css
@@ -38,24 +38,24 @@
 
   /* Book Card */
   .book-title {
-    @apply mt-2 line-clamp-1 text-base font-semibold text-white xs:text-xl;
+    @apply mt-2 line-clamp-1 text-base font-semibold text-white sm:text-xl;
   }
 
   .book-genre {
-    @apply mt-1 line-clamp-1 text-sm italic text-light-100 xs:text-base;
+    @apply mt-1 line-clamp-1 text-sm italic text-light-100 sm:text-base;
   }
 
   .book-loaned {
-    @apply flex flex-row items-center gap-1 max-xs:justify-center;
+    @apply flex flex-row items-center gap-1 max-sm:justify-center;
   }
 
   .book-btn {
-    @apply bg-dark-600 mt-3 min-h-14 w-full font-bebas-neue text-base text-primary;
+    @apply bg-dark-600 mt-3 min-h-14 w-full font-bebas-neue text-base text-primary !important;
   }
 
   /* Borrowed Book */
   .borrowed-book {
-    @apply gradient-vertical p-5 rounded-2xl xs:w-min w-full relative;
+    @apply gradient-vertical p-5 rounded-2xl sm:w-min w-full relative;
   }
 
   .borrowed-book_cover {
@@ -76,16 +76,16 @@
   }
 
   .book-cover_regular {
-    @apply xs:w-[174px] w-[114px] xs:h-[239px] h-[169px];
+    @apply sm:w-[174px] w-[114px] sm:h-[239px] h-[169px];
   }
 
   .book-cover_wide {
-    @apply xs:w-[296px] w-[256px] xs:h-[404px] h-[354px];
+    @apply sm:w-[296px] w-[256px] sm:h-[404px] h-[354px];
   }
 
   /* Book List */
   .book-list {
-    @apply mt-10 flex flex-wrap gap-5 max-xs:justify-between xs:gap-10;
+    @apply mt-10 flex flex-wrap gap-5 max-sm:justify-between sm:gap-10 !important;
   }
 
   /* Book Overview */
@@ -127,7 +127,7 @@
   }
 
   .upload-filename {
-    @apply mt-1 text-center text-xs;
+    @apply mt-1 text-center text-sm;
   }
 
   .progress {
@@ -158,7 +158,7 @@
   }
 
   #book-ticket #book-details div p:first-child {
-    @apply text-xs text-light-700;
+    @apply text-sm text-light-700;
   }
 
   #book-ticket #book-details div p:last-child {
@@ -259,7 +259,7 @@
   .root-container {
     @apply flex min-h-screen flex-1 flex-col bg-pattern bg-cover bg-top 
     /*TODO bg-dark-100  */ 
-    px-5 xs:px-10 md:px-16;
+    px-5 sm:px-10 md:px-16;
   }
 
   /* Book Details */
@@ -281,7 +281,7 @@
   }
 
   .library-title {
-    @apply mt-2 text-3xl font-semibold text-white xs:text-5xl;
+    @apply mt-2 text-3xl font-semibold text-white sm:text-5xl;
   }
 }
 
